openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exception-scanner
spec:
  selector:
    app: exception-scanner
  ports:
    - name: http
      port: 8080
      targetPort: http
